<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>wls-kernel-parent</artifactId>
		<groupId>de.heuboe.wls</groupId>
		<version>4.5.5</version>
	</parent>
	
	<groupId>de.heuboe.datex2.vms</groupId>
 	<artifactId>vms-status-publication</artifactId>
	<version>1.1.5</version>

	<name>DATEX II VMS Publisher</name>
	<description>Generates DATEX II vms publications</description>
	
	<scm>  
		<url>https://gitlab.heuboe.hbintern/Datex2/vms-status-publication</url>
		<connection>scm:git:git@gitlab.heuboe.hbintern:Datex2/vms-status-publication.git</connection>
		<developerConnection>scm:git:git@gitlab.heuboe.hbintern:Datex2/vms-status-publication.git</developerConnection>
    </scm>
	
	<properties>
  		<java.version>11</java.version>
        <additionalparam>-Xdoclint:none</additionalparam>
        
        <datex2.base.version>5.0.1</datex2.base.version>
        <vms.pub.svc.version>1.1.0</vms.pub.svc.version>
		<jmh.version>1.21</jmh.version>
		
		<kafka-tools.version>0.1.7</kafka-tools.version>

        <hb.regression.test.version>0.2.3</hb.regression.test.version>
        <mainClass>de.heuboe.datex2.vms.status.pub.Main</mainClass>
        
   	  	<heuboe.pdb.skip>false</heuboe.pdb.skip>  
	</properties>


 	<dependencies>
 	
  		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbBase</artifactId>
		</dependency>  
		
 
		<dependency>
			<groupId>de.heuboe.datex2</groupId>
			<artifactId>datex2Base</artifactId>
			<version>${datex2.base.version}</version>
			<exclusions>
				<exclusion>
					<groupId>de.heuboe.base</groupId>
					<artifactId>jhbBase</artifactId>
				</exclusion> 
				<exclusion>
				  	<groupId>xerces</groupId>
				  	<artifactId>xercesImpl</artifactId>
				</exclusion> 
				<exclusion>
					<groupId>de.heuboe.base</groupId>
					<artifactId>jddp</artifactId>
				</exclusion> 
				
			</exclusions>
		</dependency> 
		
		<dependency>
		    <groupId>de.heuboe.datex2</groupId>
		    <artifactId>datex2-push-client</artifactId>
		    <version>5.0.1</version>
		</dependency> 
		
	    <dependency>
			<groupId>de.heuboe.datex2.vms</groupId>
			<artifactId>vms-publication-service</artifactId>
			<version>${vms.pub.svc.version}</version>
			<exclusions>
				<exclusion>
					<groupId>de.heuboe.base</groupId>
					<artifactId>jddp</artifactId>
				</exclusion> 
				<exclusion>
					<groupId>de.heuboe.nrw</groupId>
					<artifactId>image-service-lib</artifactId>
				</exclusion> 
				<exclusion>
					<groupId>de.heuboe.wls</groupId>
					<artifactId>wls-persistence</artifactId>
				</exclusion> 
				<exclusion>
				  	<groupId>org.springframework.boot</groupId>
				  	<artifactId>spring-boot-starter-data-mongodb</artifactId>
				</exclusion> 
				
			</exclusions>
	    </dependency>
	    
	    
	    <!--  JAXB, JAXWS dependencies -->
	    
		<dependency>
		    <groupId>javax.annotation</groupId>
		    <artifactId>javax.annotation-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.glassfish.jaxb</groupId>
		    <artifactId>jaxb-runtime</artifactId>
		</dependency>      
		<dependency>
    		<groupId>javax.xml.ws</groupId>
    		<artifactId>jaxws-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>javax.jws</groupId>
		    <artifactId>jsr181-api</artifactId>
		    <version>1.0-MR1</version>
		</dependency>		

		<dependency>
			<groupId>javax.xml.ws</groupId>
			<artifactId>jaxws-api</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		
		
		<!-- Spring -->
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
				
			</exclusions>
		</dependency>
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-web</artifactId>
    	</dependency>
		
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		

		<!-- Kafka data -->

		<dependency>
	    	<groupId>de.heuboe.kafka</groupId>
			<artifactId>kafka-tools</artifactId>
			<version>${kafka-tools.version}</version>
	    </dependency>

		<dependency>
		    <groupId>com.google.protobuf</groupId>
		    <artifactId>protobuf-java-util</artifactId>
		    <version>3.19.1</version>
		</dependency>


		<!-- Testing only -->
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-commons</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-properties-migrator</artifactId>
			<scope>runtime</scope>
		</dependency>
		
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>${jmh.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>${jmh.version}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbRegressionTest</artifactId>
			<version>${hb.regression.test.version}</version>
			<scope>test</scope>
		</dependency>

		
 	</dependencies>
	
	
	<build>
		<plugins>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<executions>
					<!-- Optional -->
					<!-- Build a tar file to allow local inspection -->
					<execution>
						<id>docker-build-tar</id>
						<phase>package</phase>
						<goals>
							<goal>buildTar</goal>
						</goals>
					</execution>
					<!-- Required -->
					<!-- Upload the image to the registry -->
					<execution>
						<id>docker-build</id>
						<phase>deploy</phase>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<from>
						<!-- ${docker.registry} is set via settings.xml 
						<image>${docker.registry}/adoptopenjdk/openjdk11:alpine-jre</image>
						-->
						<image>${docker.registry}/eclipse-temurin:17-jre-alpine</image>
					</from>
					<to>
						<!-- This change is important -->
						<image>${docker.registry}/heuboe/datex2/vms/${project.artifactId}:${project.version}</image>
					</to>
					<container>
						<jvmFlags>
							<!-- Flags für Spring -->
							<jvmFlag>-Dorg.apache.cxf.stax.maxChildElements=500000</jvmFlag>
							<jvmFlag>-Dio.grpc.internal.DnsNameResolverProvider.enable_grpclb=true</jvmFlag>
							<jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
							<jvmFlag>-Dlogging.config=/config/log4j2.xml</jvmFlag>
							<jvmFlag>-Dspring.config.location=file:/config/</jvmFlag>
							<!-- Do not add flags such as -Xmx2G or other parameters here that 
								might be changed later on -->
						</jvmFlags>
						<mainClass>${mainClass}</mainClass>
						<ports>
							<!-- Ports with their function -->
							<port>8080</port><!-- actuator -->
							<port>9898</port><!-- grpc -->
							<port>8085</port><!-- wls -->
							<port>4916</port><!-- geo -->
						</ports>
						<labels>
							<version>${project.version}</version>
							<build.timestamp>${maven.build.timestamp}</build.timestamp>
							<!-- Metadata-derived from the git-commit-id-plugin -->
							<git.tags>${git.tags}</git.tags>
							<git.commit.id.abbrev>${git.commit.id.abbrev}</git.commit.id.abbrev>
							<git.commit.timestamp>${git.commit.time}</git.commit.timestamp>
						</labels>
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<filesModificationTime>${git.commit.time}</filesModificationTime>
					</container>
				</configuration>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<verbose>false</verbose>
					<skipPoms>false</skipPoms>
					<dateFormat>yyyy-MM-dd'T'HH:mm:ss'Z'</dateFormat><!-- Required for dockering -->
					<dateFormatTimeZone>UTC</dateFormatTimeZone><!-- Required for dockering -->
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
					<excludeProperties>
						<!-- Requested to be excluded by colleague -->
						<excludeProperty>.*\.user\..*</excludeProperty>
						<!-- same here and we already have other build information files -->
						<excludeProperty>.*\.build\..*</excludeProperty>
					</excludeProperties>
				</configuration>
			</plugin>
		</plugins>
	
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jacoco</groupId>
										<artifactId>
											jacoco-maven-plugin
										</artifactId>
										<versionRange>
											[0.7.4.201502262128,)
										</versionRange>
										<goals>
											<goal>prepare-agent</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
</project>